--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/yassineayouch/yalu102/raw/master/yalu102signed.ipa</string>
+					<string>https://archive.org/download/ytrre/ytrre.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
