--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://archive.org/download/ytrre/ytrre.ipa</string>
+					<string>https://cdn.rawgit.com/drivegoogle/yalu/9f197acb/yalu200717.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
