--- a/phoneix.plist
+++ b/phoneix.plist
@@ -17,13 +17,13 @@
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://phoenixpwn.com/phoenix.png</string>
+					<string>https://github.com/yassineayouch/yassineayouch.github.io/raw/master/phoneix.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://phoenixpwn.com/phoenix.png</string>
+					<string>https://github.com/yassineayouch/yassineayouch.github.io/raw/master/phoneix.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
