--- a/phoneix.plist
+++ b/phoneix.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://enjoy.tweakboxapp.com/ipa/tweakbox/Phoenixpwn.ipa</string>
+					<string>https://ia601509.us.archive.org/11/items/Phoenixsigned/Phoenixsigned.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
