--- a/phoenix2.plist
+++ b/phoenix2.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://ia601508.us.archive.org/4/items/phoenixsigned_201708/phoenixsigned.ipa</string>
+					<string>https://dl.dropbox.com/s/h8v5wu20vnacol6/Phoenixsigned.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
